# src/routes/contactsRouter.js
@@ -1,5 +1,4 @@
 // FILE: src/routes/contactsRouter.js
-// =============================
 import express from "express";
 import { authenticate } from "../middlewares/authenticate.js";
 import { ctrlWrapper } from "../utils/ctrlWrapper.js";
@@ -7,30 +6,35 @@ import { isValidId } from "../middlewares/isValidId.js";
 import { validateBody } from "../middlewares/validateBody.js";
 import { upload } from "../middlewares/upload.js";
 import {
-getAllContacts,
-getContactById,
-createContact,
-updateContact,
-deleteContact,
+  getAllContacts,
+  getContactById,
+  createContact,
+  updateContact,
+  deleteContact,
 } from "../controllers/contactsController.js";
-import { createContactSchema, updateContactSchema } from "../schemas/contactSchema.js";
-
+import {
+  createContactSchema,
+  updateContactSchema,
+} from "../schemas/contactSchema.js";
 
 const router = express.Router();
 router.use(authenticate);
 
-
 router.get("/", ctrlWrapper(getAllContacts));
 router.get("/:contactId", isValidId, ctrlWrapper(getContactById));
-router.post("/", upload.single("photo"), validateBody(createContactSchema), ctrlWrapper(createContact));
+router.post(
+  "/",
+  upload.single("photo"),
+  validateBody(createContactSchema),
+  ctrlWrapper(createContact)
+);
 router.patch(
-"/:contactId",
-isValidId,
-upload.single("photo"),
-validateBody(updateContactSchema),
-ctrlWrapper(updateContact)
+  "/:contactId",
+  isValidId,
+  upload.single("photo"),
+  validateBody(updateContactSchema),
+  ctrlWrapper(updateContact)
 );
 router.delete("/:contactId", isValidId, ctrlWrapper(deleteContact));
-
 
 export default router;
