# src/schemas/contactSchema.js
@@ -1,17 +1,17 @@
 import Joi from "joi";
 
 export const createContactSchema = Joi.object({
-  name: Joi.string().min(3).max(20).required(),
-  phoneNumber: Joi.string().min(3).max(20).required(),
-  contactType: Joi.string().min(3).max(20).required(),
-  email: Joi.string().email().optional(),
-  isFavourite: Joi.boolean().optional(),
+  name: Joi.string().required(),
+  email: Joi.string().email(),
+  phone: Joi.string(),
+  contactType: Joi.string().valid("personal", "work", "other").required(),
+  isFavorite: Joi.boolean(),
 });
 
 export const updateContactSchema = Joi.object({
-  name: Joi.string().min(3).max(20).optional(),
-  phoneNumber: Joi.string().min(3).max(20).optional(),
-  contactType: Joi.string().min(3).max(20).optional(),
-  email: Joi.string().email().optional(),
-  isFavourite: Joi.boolean().optional(),
-});
+  name: Joi.string(),
+  email: Joi.string().email(),
+  phone: Joi.string(),
+  contactType: Joi.string().valid("personal", "work", "other"),
+  isFavorite: Joi.boolean(),
+}).min(1);
